<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture"
        android:layout_marginTop="142dp"
        android:src="@drawable/ic_photo"
        />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/name"
        android:textColorHint="@color/gray"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:paddingEnd="16dp"
        android:autofillHints="username"
        android:textSize="14sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/edt_text_polindrome"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/polindrome"
        android:importantForAutofill="no"
        android:textColor="@android:color/black"
        android:textColorHint="@color/gray"
        android:paddingStart="15dp"
        android:paddingEnd="16dp"
        android:textSize="14sp"
        android:inputType="text"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:text="@string/check" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/blue"
        android:textColor="@android:color/white"
        android:text="@string/next" />

</LinearLayout>